Do not trigger CI by push, only tag and PR

--- a/.github/workflows/ci-macOS.yaml
+++ b/.github/workflows/ci-macOS.yaml
@@ -5,9 +5,9 @@ permissions:
 
 on:
   push:
-    branches:
-      - main
-      - develop
+    # branches:
+    #   - main
+    #   - develop
     tags:
       - 'v*'
   pull_request:
