fix build, specify mac_sdk_min=14

--- a/.github/workflows/ci-macOS.yaml
+++ b/.github/workflows/ci-macOS.yaml
@@ -100,7 +100,7 @@ jobs:
           run: |
             cd angle
             gn --version
-            gn gen out/Debug/arm64 --args="is_component_build=false use_custom_libcxx=false angle_build_tests=false build_with_chromium=false angle_enable_d3d9=false angle_enable_d3d11=false angle_enable_gl=false angle_enable_metal=true angle_enable_vulkan=false angle_enable_cl=false angle_enable_wgpu=false angle_enable_swiftshader=false angle_enable_hlsl=false angle_has_rapidjson=false angle_build_vulkan_system_info=false angle_enable_overlay=false use_glib=false angle_enable_trace=false target_cpu=\"arm64\" is_debug=true"
+            gn gen out/Debug/arm64 --args="is_component_build=false use_custom_libcxx=false angle_build_tests=false build_with_chromium=false angle_enable_d3d9=false angle_enable_d3d11=false angle_enable_gl=false angle_enable_metal=true angle_enable_vulkan=false angle_enable_cl=false angle_enable_wgpu=false angle_enable_swiftshader=false angle_enable_hlsl=false angle_has_rapidjson=false angle_build_vulkan_system_info=false angle_enable_overlay=false use_glib=false angle_enable_trace=false target_cpu=\"arm64\" is_debug=true mac_sdk_min=\"14\""
 
         - name: Build Debug arm64 dylibs
           run: |
@@ -151,7 +151,7 @@ jobs:
           run: |
             cd angle
             gn --version
-            gn gen out/Debug/x64 --args="is_component_build=false use_custom_libcxx=false angle_build_tests=false build_with_chromium=false angle_enable_d3d9=false angle_enable_d3d11=false angle_enable_gl=false angle_enable_metal=true angle_enable_vulkan=false angle_enable_cl=false angle_enable_wgpu=false angle_enable_swiftshader=false angle_enable_hlsl=false angle_has_rapidjson=false angle_build_vulkan_system_info=false angle_enable_overlay=false use_glib=false angle_enable_trace=false target_cpu=\"x64\" is_debug=true"
+            gn gen out/Debug/x64 --args="is_component_build=false use_custom_libcxx=false angle_build_tests=false build_with_chromium=false angle_enable_d3d9=false angle_enable_d3d11=false angle_enable_gl=false angle_enable_metal=true angle_enable_vulkan=false angle_enable_cl=false angle_enable_wgpu=false angle_enable_swiftshader=false angle_enable_hlsl=false angle_has_rapidjson=false angle_build_vulkan_system_info=false angle_enable_overlay=false use_glib=false angle_enable_trace=false target_cpu=\"x64\" is_debug=true mac_sdk_min=\"14\""
 
         - name: Build Debug x64 dylibs
           run: |
@@ -244,7 +244,7 @@ jobs:
           run: |
             cd angle
             gn --version
-            gn gen out/Release/arm64 --args="is_component_build=false use_custom_libcxx=false angle_build_tests=false build_with_chromium=false angle_enable_d3d9=false angle_enable_d3d11=false angle_enable_gl=false angle_enable_metal=true angle_enable_vulkan=false angle_enable_cl=false angle_enable_wgpu=false angle_enable_swiftshader=false angle_enable_hlsl=false angle_has_rapidjson=false angle_build_vulkan_system_info=false angle_enable_overlay=false use_glib=false angle_enable_trace=false target_cpu=\"arm64\" is_debug=false"
+            gn gen out/Release/arm64 --args="is_component_build=false use_custom_libcxx=false angle_build_tests=false build_with_chromium=false angle_enable_d3d9=false angle_enable_d3d11=false angle_enable_gl=false angle_enable_metal=true angle_enable_vulkan=false angle_enable_cl=false angle_enable_wgpu=false angle_enable_swiftshader=false angle_enable_hlsl=false angle_has_rapidjson=false angle_build_vulkan_system_info=false angle_enable_overlay=false use_glib=false angle_enable_trace=false target_cpu=\"arm64\" is_debug=false mac_sdk_min=\"14\""
 
         - name: Build Release arm64 dylibs
           run: |
@@ -295,7 +295,7 @@ jobs:
         run: |
           cd angle
           gn --version
-          gn gen out/Release/x64 --args="is_component_build=false use_custom_libcxx=false angle_build_tests=false build_with_chromium=false angle_enable_d3d9=false angle_enable_d3d11=false angle_enable_gl=false angle_enable_metal=true angle_enable_vulkan=false angle_enable_cl=false angle_enable_wgpu=false angle_enable_swiftshader=false angle_enable_hlsl=false angle_has_rapidjson=false angle_build_vulkan_system_info=false angle_enable_overlay=false use_glib=false angle_enable_trace=false target_cpu=\"x64\" is_debug=false"
+          gn gen out/Release/x64 --args="is_component_build=false use_custom_libcxx=false angle_build_tests=false build_with_chromium=false angle_enable_d3d9=false angle_enable_d3d11=false angle_enable_gl=false angle_enable_metal=true angle_enable_vulkan=false angle_enable_cl=false angle_enable_wgpu=false angle_enable_swiftshader=false angle_enable_hlsl=false angle_has_rapidjson=false angle_build_vulkan_system_info=false angle_enable_overlay=false use_glib=false angle_enable_trace=false target_cpu=\"x64\" is_debug=false mac_sdk_min=\"14\""
 
       - name: Build Release x64 dylibs
         run: |
